--- a/style.css
+++ b/style.css
@@ -52,3 +52,42 @@ body{
     background-color: white;
     color: #B40404;
 }
+header{
+    display: flex;
+    flex-flow: row wrap;
+    height: auto;
+    background-color: black;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+}
+.linha-cabecalho{
+    flex: 40%;
+    margin-left: 10%;
+}
+.linha-cabecalho h2{
+    font-weight: 900;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+.linha-cabecalho p{
+    text-align: left;
+    color: white;
+}
+.imgcabecalho{
+    margin-right: 10%;
+    flex: 40%;
+    text-align: center;
+}
+.botaocontato{
+    background-color: #B40404;
+    padding: 20px;
+    color: white;
+    text-transform: uppercase;
+    border-radius: 5px;
+    text-decoration: none;
+    display: inline-block;
+}
